syntax = "proto3";

package examples;

option java_package = "io.provenance.scope.examples";
option java_outer_classname = "SimpleExample";

message ExampleName {
    string first_name = 1;
    string last_name = 2;
    string middle_name = 3;
}
